--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,15 +7,19 @@
     <uses-sdk android:minSdkVersion="10" />
 
     <uses-permission android:name="android.permission.READ_SMS" />
-	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	<uses-permission android:name="android.permission.SEND_SMS" />
-	<uses-permission android:name="android.permission.WRITE_SMS" />
-	<uses-permission android:name="android.permission.RECEIVE_SMS" />
-	<uses-permission android:name="android.permission.CALL_PHONE" />
-	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-	<uses-permission android:name="android.permission.VIBRATE" />
-	
-    <application android:name=".SmsApplication"
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_MMS" />
+
+    <application
+        android:name=".SmsApplication"
         android:icon="@drawable/ic_sms"
         android:label="@string/app_name" >
         <activity
@@ -24,20 +28,24 @@
             android:theme="@style/Theme.Sherlock" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.dir/mms" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android-dir/mms-sms" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".ThreadActivity"
             android:label="@string/app_name"
@@ -48,25 +56,25 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".NewSmsActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Sherlock" 
-            android:windowSoftInputMode="stateVisible|adjustResize">
+            android:theme="@style/Theme.Sherlock"
+            android:windowSoftInputMode="stateVisible|adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
-        <receiver android:name=".SmsReceiver">
-            <intent-filter android:priority="2147483647">
+
+        <receiver android:name=".SmsReceiver" >
+            <intent-filter android:priority="2147483647" >
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <!-- 
+            <!--
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.WAP_PUSH_RECEIVED" />
                 <data android:mimeType="application/vnd.wap.mms-message" />
@@ -77,15 +85,22 @@
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.CONTENT_CHANGED" />
             </intent-filter>
-             -->
+            -->
         </receiver>
-        
-        <receiver android:name=".SmsSendStatusReceiver" 
-            >
-            <intent-filter> 
+        <receiver android:name=".SmsReceiver" >
+            <intent-filter android:priority="10000" >
+                <action android:name="android.provider.Telephony.WAP_PUSH_RECEIVED" />
+
+                <data android:mimeType="application/vnd.wap.mms-message" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".SmsSendStatusReceiver"
+            android:permission="android.permission.BROADCAST_WAP_PUSH" >
+            <intent-filter>
                 <action android:name="com.race604.sms.SENT" />
-                <action android:name="com.race604.sms.DELIVERED" /> 
-            </intent-filter> 
+                <action android:name="com.race604.sms.DELIVERED" />
+            </intent-filter>
         </receiver>
     </application>
 
